<resources>
    <string name="app_name">Fantasy Football</string>
    <string name="enter_login_string">Enter login</string>
    <string name="register_login_string">Register login</string>
    <string name="email_hint_string">Email</string>
    <string name="password_hint_string">Password</string>
    <string name="login_string">Login</string>
    <string name="logo">logo</string>
    <string name="register">Register</string>
    <string name="forgot_password_button">Send Password Reset Email</string>
    <string name="logout_string">Logout</string>
    <string name="register_string">Register</string>
    <string name="forgot_password_hint_string">Forgot password?</string>
    <string name="login_toast">Please enter email.</string>
    <string name="password_toast">Please enter password!</string>
    <string name="register_success_string">Registration successful.</string>
    <string name="register_failed_string">Registration failed. Please try again later</string>
    <string name="invalid_password">Password must contain 8 characters with one letter and one number.</string>
    <string name="invalid_email">Please enter valid email.</string>
    <string name="successful_reset">Email has successfully been sent.</string>
    <string name="reset_info_string">Enter your email address and you will receive an email to reset your password.</string>
    <string name="upcoming_matches"><u><b>Upcoming Matches</b></u></string>
    <string name="current_league"><u><b>Current Leagues</b></u></string>
    <string name="import_league">Import League</string>
    <string name="create_league">Create League</string>
    <string name="league_name_placeholder">League Name Placeholder</string>
    <string name="points">Points</string>
    <string name="points_placeholder">Points Placeholder</string>
    <string name="team_name_placeholder">Team Name Placeholder</string>
    <string name="record_placeholder">Record PlaceHolder</string>
    <string name="player">player</string>
    <string name="overview">Overview</string>
    <string name="advice">advice</string>
    <string name="players_to_sell"><u><b>Players to Sell</b></u></string>
    <string name="weak_positions"><u><b>Weak Positions</b></u></string>
    <string name="strong_positions"><u><b>Strong Positions</b></u></string>
    <string name="nfl_team_stake"><u><b>Top 3 NFL Team Stake</b></u></string>
    <string name="nfl_team_and_percentage">NFL Team and Percentage</string>
    <string name="top_5_most_rostered_players"><u><b>Top 5 Most Rostered Players</b></u></string>
    <string name="top_position_players"><u><b>Top Position Players</b></u></string>

    <string name="playernameplaceholder">PlayerNamePlaceHolder</string>
    <string name="playerNamePlaceHolderString">Player Name: %s</string>
    <string name="positionplaceholder">PositionPlaceHolder</string>
    <string name="positionplaceholderString">Position: %s</string>
    <string name="points_per_game">Points Per Game</string>
    <string name="points_per_game_string">Points Per Game: %d</string>
    <string name="snapshare">SnapShare</string>
    <string name="snapsharestring">Snap Share: %d</string>
    <string name="ffpoints">FFPoints</string>
    <string name="ffpoints_string">FFPoints: %d</string>
    <string name="player_name">Player Name</string>
    <string name="delete_league">Delete League</string>
    <string-array name="teams">
        <item>ARI</item>
        <item>ATL</item>
        <item>BAL</item>
        <item>BUF</item>
        <item>CAR</item>
        <item>CHI</item>
        <item>CIN</item>
        <item>CLE</item>
        <item>DAL</item>
        <item>DEN</item>
        <item>DET</item>
        <item>GB</item>
        <item>HOU</item>
        <item>IND</item>
        <item>JAX</item>
        <item>KC</item>
        <item>MIA</item>
        <item>MIN</item>
        <item>NE</item>
        <item>NO</item>
        <item>NYG</item>
        <item>NYJ</item>
        <item>LV</item>
        <item>PHI</item>
        <item>PIT</item>
        <item>LAC</item>
        <item>SF</item>
        <item>SEA</item>
        <item>LAR</item>
        <item>TB</item>
        <item>TEN</item>
        <item>WAS</item>
    </string-array>

    <string-array name="positions">
        <item>QB</item>
        <item>RB</item>
        <item>WR</item>
        <item>TE</item>
        <item>K</item>
    </string-array>
</resources>