<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:clickable="true"
        app:cardElevation="7dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="horizontal"
            android:weightSum="3">

            <ImageView
                android:id="@+id/teamImage"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_marginTop="5dp"
                android:layout_marginStart="5dp"
                android:src="@android:drawable/ic_menu_camera" />

            <LinearLayout
                android:layout_width="150dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/position"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/positionplaceholder"
                    android:gravity="center_vertical"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingStart="5dp"
                    android:lines="1"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/playerName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/playernameplaceholder"
                    android:gravity="center_vertical"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingStart="5dp"
                    android:lines="1"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/teamName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/team_name_placeholder"
                    android:gravity="center_vertical"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:lines="1"
                    android:textColor="@color/black"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="155dp"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/FFPoints"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/ffpoints"
                    android:gravity="center_vertical"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingStart="5dp"
                    android:lines="1"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/SnapShare"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/snapshare"
                    android:gravity="center_vertical"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingStart="5dp"
                    android:lines="1"
                    android:textColor="@color/black"/>

                <TextView
                    android:id="@+id/PPG"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/points_per_game"
                    android:gravity="center_vertical"
                    android:paddingTop="5dp"
                    android:paddingBottom="5dp"
                    android:paddingLeft="5dp"
                    android:lines="1"
                    android:textColor="@color/black"/>
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>


</LinearLayout>