<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        android:layout_margin="10dp"
        android:clickable="true"
        app:cardElevation="7dp"
    >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/leagueName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/league_name_placeholder"
                android:textSize="25sp"
                android:textStyle="bold"
                android:lines="2"
                android:textColor="@color/black">
            </TextView>

            <TextView
                android:id="@+id/teamName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/team_name_placeholder"
                android:gravity="center"
                android:textSize="20sp"
                android:paddingTop="5dp"
                android:paddingLeft="10dp"
                android:lines="1">
            </TextView>

            <TextView
                android:id="@+id/record"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/record_placeholder"
                android:textSize="20sp"
                android:gravity="center"
                android:paddingTop="5dp"
                android:paddingLeft="10dp"
                android:paddingBottom="10dp"
                android:lines="1">

            </TextView>


        </LinearLayout>
    </androidx.cardview.widget.CardView>

</LinearLayout>