<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LeagueActivity">

    <TextView
        android:id="@+id/leagueName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/league_name_placeholder"
        android:textSize="25sp"
        android:textStyle="bold"
        android:lines="2"
        android:textColor="@color/black">
    </TextView>

    <TextView
        android:id="@+id/teamName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/team_name_placeholder"
        android:gravity="center"
        android:textSize="20sp"
        android:paddingTop="5dp"
        android:paddingLeft="10dp"
        android:lines="1">
    </TextView>

    <TextView
        android:id="@+id/player1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/player"
        android:textSize="20sp"
        android:gravity="center"
        android:paddingTop="30dp"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp"
        android:lines="1">

    </TextView>
    <TextView
        android:id="@+id/player2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/player"
        android:textSize="20sp"
        android:gravity="center"
        android:paddingTop="5dp"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp"
        android:lines="1">

    </TextView>
    <TextView
        android:id="@+id/player3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/player"
        android:textSize="20sp"
        android:gravity="center"
        android:paddingTop="5dp"
        android:paddingLeft="10dp"
        android:paddingBottom="10dp"
        android:lines="1">

    </TextView>

</LinearLayout>